fix(ui): display the overview mode button nicely on mobile

--- a/frontend/src/styles/_components.scss
+++ b/frontend/src/styles/_components.scss
@@ -237,6 +237,12 @@ input[type='checkbox']:checked.checkbox {
   grid-area: topbar-right;
   margin-left: auto;
 
+  @media (max-width: 900px) {
+    p {
+      display: none;
+    }
+  }
+
   &.active {
     box-shadow: 0px 0px 4px 2px var(--signature-color);
   }
